# Zero-trace

./: README.md  andnr.py  instruction.txt
Android erasure/certiwipe-server/: CertiWipe.sol  package-lock.json  package.json  server.js
Android erasure/certiwipe-server/public/: index.html  index_backup.html
Android erasure/windows removal backend/: Cargo.toml  README.md  VerificationPortal.jsx  certificate_converter.py  prompt.txt  uploader.py
Android erasure/windows removal backend/src/: certificate.rs  error.rs  lib.rs  main.rs
Android erasure/windows removal backend/src/platform/: linux.rs  mod.rs  windows.rs
Android erasure/windows removal backend/src/wipe/: clear.rs  mod.rs  purge.rs
frontend + server package/: GEMINI.md  package-lock.json
frontend + server package/certiwipe-server/: .env  package-lock.json  package.json  pinataUploader.js  server.js
frontend + server package/certiwipe-server/config/: firebase-admin.js
frontend + server package/certiwipe-server/middleware/: auth.middleware.js  firebase-auth.js
frontend + server package/certiwipe-server/services/: geminiChat.js
