'''
[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
clap = { version = "4.0", features = ["derive"] }
indicatif = "0.17"
uuid = { version = "1.4", features = ["v4", "serde"] }
rand = "0.8"

[target.'cfg(windows)'.dependencies]
windows = {
    version = "0.52.0",
    features = [
        "Win32_Foundation",
        "Win32_Security",
        "Win32_Storage_FileSystem",
        "Win32_System_IO",
        "Win32_Storage_DeviceAndDriverInformation",
        "Win32_System_SystemServices",
        "Win32_System_Com",
    ]
}
wmi = { version = "0.12", features = ["async-tokio"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.26", features = ["fs", "user"] }
libc = "0.2"

# Dependencies for digital signature
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
p256 = { version = "0.13", features = ["ecdsa"] }
'''
